<resources>
    <string name="app_name">BibliAPP</string>
    <string name="db">bbdd2.db</string>
    <string name="MainStart">Bienvenido a BibliAPP</string>
    <string name="MainUsuario">Usuario</string>
    <string name="MainIntroduccionUsuario">Introduce e-mail</string>
    <string name="MainNuevoUsuario">Crear suario</string>
    <string name="MainContrasenya">Contraseña</string>
    <string name="MainBotonIniciarSesion">Iniciar Sesion</string>
    <string name="MainBotonCrearUsuario">Crear nuevo usuario</string>
    <string name="NuevoUsuarioNombre">Nombre</string>
    <string name="NuevoUsuarioApellido">Apellido</string>
    <string name="NuevoUsuarioEmail">Email</string>
    <string name="NuevoUsuarioContrasenya">Contraseña</string>
    <string name="NuevoUsuarioContrasenyaRep">Repite contraseña</string>
    <string name="NuevoUsuarioBotonNuevo">Crear usuario</string>
    <string name="ListadoLibrosNuevoLibro">Nuevo libro</string>
    <string name="ListadoLibrosCerrarSesion">Cerrar sesión</string>
    <string name="ListadoLibrosBuscarLibro">Buscar en biblioteca</string>
    <string name="InformacionLibrosen_posesion">Lo tengo</string>
    <string name="InformacionLibrosdeseado">Lo quiero</string>
    <string name="InformacionLibrosleido">Leido</string>
    <string name="InformacionLibrosfavorito">Favorito</string>
    <string name="InformacionLibrosBotonGuardarCambios">Guardar cambios</string>
    <string name="AddLibroNuevoLibro">Introduce el isbn</string>
    <string name="AddLibroeditTextISBN">ISBN</string>
    <string name="AddLibroBotonBuscar">Buscar ISBN</string>
    <string name="AddLibroBotonActivarCamara">Activar camara</string>
    <string name="BusquedaLibroTitulo">Titulo</string>
    <string name="BusquedaLibroTematica">Tematica</string>
    <string name="BusquedaLibroAutor">Autor</string>
    <string name="BusquedaLibroButtonBuscar">Buscar</string>
    <string name="BusquedaLibroBooleanos">Opciones</string>
</resources>