<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ListadoLibrosActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <Button
                android:id="@+id/buttonCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="cerrarSesion"
                android:text="@string/ListadoLibrosCerrarSesion" />

            <Button
                android:id="@+id/buttonBuscarLibro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="buscarLibros"
                android:text="@string/ListadoLibrosBuscarLibro" />

            <Button
                android:id="@+id/buttonNuevoLibro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="addLibro"
                android:text="@string/ListadoLibrosNuevoLibro" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaBusquedaLibros"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>