<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLibroActivity">

    <TextView
        android:id="@+id/textNuevoLibro"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:text="@string/AddLibroNuevoLibro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/editTextAddLibroISBN"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/AddLibroeditTextISBN"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/textNuevoLibro"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddLibroBuscarISBN"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:onClick="botonBuscarISBN"
        android:text="@string/AddLibroBotonBuscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddLibroISBN"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/buttonActiuvarCamara"
        android:layout_width="72dp"
        android:layout_height="53dp"
        android:background="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/editTextAddLibroISBN"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

</androidx.constraintlayout.widget.ConstraintLayout>