<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutInformacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionLibroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageInformacionLibrosImagen"
                        android:layout_width="130dp"
                        android:layout_height="193dp"
                        android:layout_marginStart="12dp"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textInfoLibroTitulo"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:paddingHorizontal="10dp"
                            android:text="TextView"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textInfoLibroAutor"
                            android:layout_width="match_parent"
                            android:layout_height="23dp"
                            android:layout_marginTop="2dp"
                            android:paddingHorizontal="10dp"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/textInfoLibroHojas"
                            android:layout_width="match_parent"
                            android:layout_height="23dp"
                            android:paddingHorizontal="10dp"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/textInfoLibroTematicas"
                            android:layout_width="match_parent"
                            android:layout_height="97dp"
                            android:paddingHorizontal="10dp"
                            android:text="TextView" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textInfoLibroSinopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingVertical="10dp"
                    android:text="TextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:gravity="center|center_horizontal"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/switchLeido"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center|clip_vertical"
                            android:text="@string/InformacionLibrosleido" />

                        <Switch
                            android:id="@+id/switchen_posesion"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:gravity="center|clip_vertical"
                            android:text="@string/InformacionLibrosen_posesion" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:gravity="center|center_horizontal"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/switchdeseado"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center|clip_vertical"
                            android:text="@string/InformacionLibrosdeseado" />

                        <Switch
                            android:id="@+id/switchfavorito"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:gravity="center|clip_vertical"
                            android:text="@string/InformacionLibrosfavorito" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="confirmarCambios"
                    android:text="@string/InformacionLibrosBotonGuardarCambios" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>